--- a/src/pamflet/00.md
+++ b/src/pamflet/00.md
@@ -5,4 +5,19 @@ out: index.html
 scodec
 ======
 
-Hello, world!
+scodec is a suite of libraries for working with binary data. Support ranges from simple, performant data structures for working with bits and bytes to streaming encoding and decoding.
+
+
+There are three primary modules:
+
+ - scodec-bits - Zero dependency library that provides persistent data structures, `BitVector` and `ByteVector`, for working with binary.
+ - scodec-core - Combinator based library for encoding/decoding values to/from binary.
+ - scodec-stream - Binding between scodec-core and [scalaz-stream](http://github.com/scalaz/scalaz-stream) that enables streaming encoding/decoding.
+
+There are a few secondary modules as well:
+
+ - scodec-spire - Binding between scodec-core and [spire](http://github.com/non/spire), mostly taking advantage of unsigned numeric types.
+ - scodec-protocols - Library of general purpose implementations of common protocols.
+
+This guide goes over each of these modules in detail.
+
