More core algebra

--- a/src/pamflet/00.md
+++ b/src/pamflet/00.md
@@ -21,3 +21,9 @@ There are a few secondary modules as well:
 
 This guide goes over each of these modules in detail.
 
+## Getting Source, Binaries, and Docs
+
+Each of the modules are available on GitHub under the [scodec organization](http://github.com/scodec). Binaries are published to Maven Central under the group id `org.typelevel`. ScalaDoc is available for online browsing at [typelevel.org](http://docs.typelevel.org/api/scodec/). The ScalaDoc has a lot of detail, especially in package level documentation.
+
+All of the modules adhere to the Typelevel binary compatibility guidelines. In short, versions that share the same major.minor version number are forward binary compatible. An exception to this rule is major version 0, which indicates that no binary compatibility is guaranteed from version to version. For example, code that was compiled against scodec-bits 1.0.1 will function with 1.0.4 but not necessarily 1.0.0 or 1.1.0.
+
