Change mailing list link to Typelevel list

--- a/src/pamflet/00.md
+++ b/src/pamflet/00.md
@@ -29,7 +29,7 @@ All of the modules adhere to the Typelevel binary compatibility guidelines. In s
 
 ## Getting Help / Community
 
-To get help with scodec, consider using the [scodec mailing list](https://groups.google.com/forum/#!forum/scodec), using the [scodec tag on StackOverflow](http://stackoverflow.com/questions/tagged/scodec), or mentioning [#scodec on Twitter](https://twitter.com/search?q=scodec&src=sprv).
+To get help with scodec, consider using the [Typelevel mailing list](https://groups.google.com/forum/#!forum/typelevel), using the [scodec tag on StackOverflow](http://stackoverflow.com/questions/tagged/scodec), or mentioning [#scodec on Twitter](https://twitter.com/search?q=scodec&src=sprv).
 
 People are expected to follow the [Typelevel Code of Conduct](http://typelevel.org/conduct.html) when discussing scodec on the Github page, IRC channel, mailing list, or other venues.
 
