--- a/src/pamflet/00.md
+++ b/src/pamflet/00.md
@@ -16,6 +16,7 @@ There are three primary modules:
 
 There are a few secondary modules as well:
 
+ - scodec-scalaz - Binding between scodec-core and [scalaz](http://github.com/scalaz/scalaz), which provides typeclass instances for the types from scodec-bits and scodec-core.
  - scodec-spire - Binding between scodec-core and [spire](http://github.com/non/spire), mostly taking advantage of unsigned numeric types.
  - scodec-protocols - Library of general purpose implementations of common protocols.
 
@@ -23,15 +24,11 @@ This guide goes over each of these modules in detail.
 
 ## Getting Source, Binaries, and Docs
 
-Each of the modules are available on GitHub under the [scodec organization](http://github.com/scodec). Binaries are published to Maven Central under the group id `org.typelevel`. ScalaDoc is available for online browsing at [typelevel.org](http://docs.typelevel.org/api/scodec/). The ScalaDoc has a lot of detail, especially in package level documentation.
+Each of the modules are available on GitHub under the [scodec organization](http://github.com/scodec). Binaries are published to Maven Central under the group id `org.scodec`. ScalaDoc is available for online browsing at [typelevel.org](http://scodec.org/api/). The ScalaDoc has a lot of detail, especially in package level documentation.
 
-All of the modules adhere to the Typelevel binary compatibility guidelines. In short, versions that share the same major.minor version number are forward binary compatible. An exception to this rule is major version 0, which indicates that no binary compatibility is guaranteed from version to version. For example, code that was compiled against scodec-bits 1.0.1 will function with 1.0.4 but not necessarily 1.0.0 or 1.1.0.
+All of the modules adhere to binary compatibility rules. In short, versions that share the same major.minor version number are forward binary compatible. An exception to this rule is major version 0, which indicates that no binary compatibility is guaranteed from version to version. For example, code that was compiled against scodec-bits 1.0.1 will function with 1.0.4 but not necessarily 1.0.0 or 1.1.0.
 
-## Getting Help / Community
+## Getting Help
 
 To get help with scodec, consider using the [Typelevel mailing list](https://groups.google.com/forum/#!forum/typelevel), using the [scodec tag on StackOverflow](http://stackoverflow.com/questions/tagged/scodec), or mentioning [#scodec on Twitter](https://twitter.com/search?q=scodec&src=sprv).
-
-People are expected to follow the [Typelevel Code of Conduct](http://typelevel.org/conduct.html) when discussing scodec on the Github page, IRC channel, mailing list, or other venues.
-
-Concerns or issues can be sent to Michael Pilquist (mpilquist@gmail.com) or to Typelevel.
 
