Update links to mailing list

--- a/src/pamflet/00.md
+++ b/src/pamflet/00.md
@@ -30,5 +30,5 @@ All of the modules adhere to binary compatibility rules. In short, versions that
 
 ## Getting Help
 
-To get help with scodec, consider using the [Typelevel mailing list](https://groups.google.com/forum/#!forum/typelevel), using the [scodec tag on StackOverflow](http://stackoverflow.com/questions/tagged/scodec), or mentioning [#scodec on Twitter](https://twitter.com/search?q=scodec&src=sprv).
+To get help with scodec, consider using the [Typelevel mailing list](https://groups.google.com/forum/#!forum/scodec), using the [scodec tag on StackOverflow](http://stackoverflow.com/questions/tagged/scodec), or mentioning [#scodec on Twitter](https://twitter.com/search?q=scodec&src=sprv).
 
